crates/ruff_python_parser/tests/snapshots/invalid_syntax@global_stmt_expression.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/global_stmt_expression.py
---
## AST

```
Module(
    ModModule {
        node_index: AtomicNodeIndex(..),
        range: 0..13,
        body: [
            Global(
                StmtGlobal {
                    node_index: AtomicNodeIndex(..),
                    range: 0..8,
                    names: [
                        Identifier {
                            id: Name("x"),
                            range: 7..8,
                            node_index: AtomicNodeIndex(..),
                        },
                    ],
                },
            ),
            Expr(
                StmtExpr {
                    node_index: AtomicNodeIndex(..),
                    range: 9..12,
                    value: UnaryOp(
                        ExprUnaryOp {
                            node_index: AtomicNodeIndex(..),
                            range: 9..12,
                            op: UAdd,
                            operand: NumberLiteral(
                                ExprNumberLiteral {
                                    node_index: AtomicNodeIndex(..),
                                    range: 11..12,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | global x + 1
  |          ^ Syntax Error: Simple statements must be separated by newlines or semicolons
  |
